alignment fix

--- a/src/app/shared/component/marvel-header/marvel-header.component.scss
+++ b/src/app/shared/component/marvel-header/marvel-header.component.scss
@@ -5,7 +5,9 @@ ion-header {
         text-align: center
     }
     ion-title {
-      --color: #ffffff;
-      font-size:25px;
+        width: auto;
+        --color: #ffffff;
+        font-size:22px;
+        text-align: center
     }
 }
